--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Eric Silva <ericsilvaccp@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@commitlint/cli": "^16.0.0"
+  },
+  "devDependencies": {
+    "husky": "^7.0.4"
+  }
 }
